--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100vw;
-  background: linear-gradient(45deg, #ECE9E6, #FFFFFF)
+  background: linear-gradient(to right, #ECE9E6, #FFFFFF)
 }
 
 code {
